--- a/src/App.css
+++ b/src/App.css
@@ -718,7 +718,7 @@
   border-radius: 50%;
   display: flex;
   align-items: center;
-  justify-center;
+  justify-content: center;
   font-weight: 700;
   font-size: 16px;
   color: white;
